--- a/hfds.html
+++ b/hfds.html
@@ -8139,7 +8139,7 @@
       </ul>
 
       <div catoption="xxx" class="content_tabs" id="DT">
-        <div class="lgnd">* Non-binary (NB) is someone who does not identify exclusively as male or female</div>
+        <div class="lgnd" keyword="opt_c:nbntext">* Non-binary (NB) is someone who does not identify exclusively as male or female</div>
 
         <div class="grdTb1-1">
           <div class="title" keyword="opt_c:status">Status</div>
@@ -8152,15 +8152,15 @@
 
           <div class="tt" keyword="opt_c:total">Total</div>
 
-          <div class="l1">Internally Displaced Person</div>
+          <div class="l1" keyword="opt_c:idp">Internally Displaced Person</div>
 
-          <div class="l2">Refugee</div>
+          <div class="l2" keyword="opt_c:refugee">Refugee</div>
 
-          <div class="l3">Host Community</div>
+          <div class="l3" keyword="opt_c:hcomnty">Host Community</div>
 
-          <div class="l4">Returnee</div>
+          <div class="l4" keyword="opt_c:returnee">Returnee</div>
 
-          <div class="l5">Migrant</div>
+          <div class="l5" keyword="opt_c:migrant">Migrant</div>
 
           <div class="l6" keyword="opt_c:total">Total</div>
 
@@ -8224,15 +8224,15 @@
 
           <div class="tt" keyword="opt_c:total">Total</div>
 
-          <div class="l1">Person living with disabilities</div>
+          <div class="l1" keyword="opt_c:pwd">Person living with disabilities</div>
 
-          <div class="l2">SOGIESC person</div>
+          <div class="l2" keyword="opt_c:sogiesc">SOGIESC person</div>
 
-          <div class="l3">Indigenous person</div>
+          <div class="l3" keyword="opt_c:iperson">Indigenous person</div>
 
-          <div class="l4">Pregnant and Lactating Person</div>
+          <div class="l4" keyword="opt_c:plactp">Pregnant and Lactating Person</div>
 
-          <div class="l5">Person living with HIV</div>
+          <div class="l5" keyword="opt_c:plwhiv"></div>>Person living with HIV</div>
 
           <div class="l6" keyword="opt_c:total">Total</div>
 
@@ -8296,9 +8296,9 @@
 
           <div class="tt" keyword="opt_c:total">Total</div>
 
-          <div class="l1">Number of clients who received clinical services</div>
+          <div class="l1" keyword="opt_c:ncwhrcs">Number of clients who received clinical services</div>
 
-          <div class="l2">Number of clients reached through information and education sessions</div>
+          <div class="l2" keyword="opt_c:ncreachies">Number of clients reached through information and education sessions</div>
 
           <div class="l1c2"><input /></div>
 
@@ -8441,7 +8441,7 @@
         <div class="grdTb2-1a" id="one">
           <div class="t1" keyword="opt_c:sgbv">Sexual and Gender-Based Violence</div>
 
-          <div class="l1 lv0">Is your clinic set up to provide emergency contraception to survivors?</div>
+          <div class="l1 lv0" keyword="opt_c:tb2q1">Is your clinic set up to provide emergency contraception to survivors?</div>
 
           <div class="ans rdOne" lables="Yes,No" name="q1" values="oneyes,oneno">&nbsp;</div>
         </div>
@@ -8449,14 +8449,14 @@
         <br />
         &nbsp;
         <div class="grdTb2-a1" id="two">
-          <div class="l1 lv0">Is your clinic set up to provide Post-Exposure Prophylaxis for HIV to survivors?</div>
+          <div class="l1 lv0" keyword="opt_c:tb2q6">Is your clinic set up to provide Post-Exposure Prophylaxis for HIV to survivors?</div>
 
           <div class="ans rdTwo" lables="Yes,No" name="q6" values="twoyes,twono">&nbsp;</div>
         </div>
       </div>
 
       <div catoption="xxx" class="content_tabs" id="HIVSTI">
-        <div class="lgnd">* Non-binary (NB) is someone who does not identify exclusively as male or female</div>
+        <div class="lgnd" keyword="opt_c:nbntext">* Non-binary (NB) is someone who does not identify exclusively as male or female</div>
 
         <div class="grdTb3-1">
           <div class="title" keyword="opt_c:sti_hiv">Sexually transmitted infections &amp; HIV</div>
@@ -9027,19 +9027,19 @@
 
           <div class="tt" keyword="opt_c:total">Total</div>
 
-          <div class="l1">Provided counselling on abortion</div>
+          <div class="l1" keyword="opt_c:pca">Provided counselling on abortion</div>
 
-          <div class="l2">Provided misoprostol and/or mifepristone for uterine evacuation</div>
+          <div class="l2" keyword="opt_c:pmmue">Provided misoprostol and/or mifepristone for uterine evacuation</div>
 
-          <div class="l3">Provided MVA for uterine evacuation</div>
+          <div class="l3" keyword="opt_c:pmvaue">Provided MVA for uterine evacuation</div>
 
-          <div class="l4">Provided D&amp;C for uterine evacuation*</div>
+          <div class="l4" keyword="opt_c:pdcue">Provided D&amp;C for uterine evacuation*</div>
 
-          <div class="l5">Treated for complications of abortion</div>
+          <div class="l5" keyword="opt_c:tca">Treated for complications of abortion</div>
 
-          <div class="l6">Received contraception method before discharge</div>
+          <div class="l6" keyword="opt_c:rcmbd">Received contraception method before discharge</div>
 
-          <div class="l7">Referred for comprehensive abortion care</div>
+          <div class="l7" keyword="opt_c:rcac">Referred for comprehensive abortion care</div>
 
           <div class="l1c2"><input /></div>
 
@@ -9170,7 +9170,6 @@
             'display': 'block'
           });
           break;
-
         case '#CAC':
           $(this).attr('tabindex', '0');
           $(this).addClass('ui-state-hover');
@@ -9185,7 +9184,6 @@
           break;
       }
     });
-
   });
 
   function RenderRadioBtnTags() {
@@ -9390,37 +9388,35 @@
       })
     }
 
-
-
     me.rbselected = function (rbsctd) {
       console.log(rbsctd);
       const oneyes = `<div id="oneyes" class="grdTb2-a1s">
-            <div class="l1 lv1">If yes, did your clinic provide emergency contraception to survivors during this reporting period?</div>
+            <div class="l1 lv1" keyword="opt_c:tb2q2">If yes, did your clinic provide emergency contraception to survivors during this reporting period?</div>
             <div class="ans rd_oneyes" lables="Yes,No" name="q2" values="oneyes_y,oneyes_n"></div>
         </div>`
 
-      const oneyes_n = `<div id="oneyes-n" class="grdTb2-a4"><div id="oneyes_n" class="l1 lv1">If no, why is this service not available?</div></div>`
+      const oneyes_n = `<div id="oneyes-n" class="grdTb2-a4"><div id="oneyes_n" class="l1 lv1" keyword="opt_c:tb2q_no">If no, why is this service not available?</div></div>`
 
       const oneno = `<div id="oneno" class="grdTb2-a1s">
-            <div class="l1 lv1">If no, can your clinic support survivors to access emergency contraception elsewhere through a safe referral?</div>
+            <div class="l1 lv1" keyword="opt_c:tb2q4">If no, can your clinic support survivors to access emergency contraception elsewhere through a safe referral?</div>
             <div class="ans rd_oneno" lables="Yes,No" name="q4" values="onenoyes,onenono"></div>
         </div>`
 
-      const oneno_n = `<div id="oneno-n" class="grdTb2-a2"><div id="oneno_n" class="l1 lv3">If no, Why?</div></div>`
+      const oneno_n = `<div id="oneno-n" class="grdTb2-a2"><div id="oneno_n" class="l1 lv3" keyword="opt_c:tb2qwhy">If no, Why?</div></div>`
 
       const twoyes = `<div id="twoyes" class="grdTb2-a1s">
-            <div class="l1 lv1">If yes, did your clinic provide Post-Exposure Prophylaxis for HIV to survivors during this reporting period?</div>
+            <div class="l1 lv1" keyword="opt_c:tb2q7">If yes, did your clinic provide Post-Exposure Prophylaxis for HIV to survivors during this reporting period?</div>
             <div class="ans rd_twoyes" lables="Yes,No" name="q7" values="twoyes_y,twoyes_n"></div>
         </div>`
 
-      const twoyes_n = `<div id="twoyes-n" class="grdTb2-a4"><div id="twoyes_n" class="l1 lv1">If no, why is this service not available?</div></div>`
+      const twoyes_n = `<div id="twoyes-n" class="grdTb2-a4"><div id="twoyes_n" class="l1 lv1" keyword="opt_c:tb2q_no">If no, why is this service not available?</div></div>`
 
       const twono = `<div id="twono" class="grdTb2-a1">
-            <div class="l1 lv2">If no, can your clinic support survivors to access Post-Exposure Prophylaxis for HIV elsewhere  through a safe referral?</div>
+            <div class="l1 lv2" keyword="opt_c:"tb2q9">If no, can your clinic support survivors to access Post-Exposure Prophylaxis for HIV elsewhere  through a safe referral?</div>
             <div class="ans rd_twono" lables="Yes,No" name="q9" values="twono_y,twono_n"></div>
         </div>`
 
-      const twono_n = `<div id="twono-n" class="grdTb2-a2"><div id="twono_n" class="l1 lv3">If no, Why?</div></div>`
+      const twono_n = `<div id="twono-n" class="grdTb2-a2"><div id="twono_n" class="l1 lv3" keyword="opt_c:tb2qwhy">If no, Why?</div></div>`
 
       switch (rbsctd) {
         // Q1
