--- a/hfds-local.html
+++ b/hfds-local.html
@@ -33,7 +33,8 @@
       </ul>
 
       <div catoption="xxx" class="content_tabs" id="DT">
-        <div class="lgnd">* Non-binary (NB) is someone who does not identify exclusively as male or female</div>
+        <div class="lgnd" keyword="opt_c:nbntext">* Non-binary (NB) is someone who does not identify exclusively as male
+          or female</div>
 
         <div class="grdTb1-1">
           <div class="title" keyword="opt_c:status">Status</div>
@@ -46,15 +47,15 @@
 
           <div class="tt" keyword="opt_c:total">Total</div>
 
-          <div class="l1">Internally Displaced Person</div>
+          <div class="l1" keyword="opt_c:idp">Internally Displaced Person</div>
 
-          <div class="l2">Refugee</div>
+          <div class="l2" keyword="opt_c:refugee">Refugee</div>
 
-          <div class="l3">Host Community</div>
+          <div class="l3" keyword="opt_c:hcomnty">Host Community</div>
 
-          <div class="l4">Returnee</div>
+          <div class="l4" keyword="opt_c:returnee">Returnee</div>
 
-          <div class="l5">Migrant</div>
+          <div class="l5" keyword="opt_c:migrant">Migrant</div>
 
           <div class="l6" keyword="opt_c:total">Total</div>
 
@@ -118,65 +119,41 @@
 
           <div class="tt" keyword="opt_c:total">Total</div>
 
-          <div class="l1">Person living with disabilities</div>
+          <div class="l1" keyword="opt_c:pwd">Person living with disabilities</div>
 
-          <div class="l2">SOGIESC person</div>
+          <div class="l2" keyword="opt_c:sogiesc">SOGIESC person</div>
 
-          <div class="l3">Indigenous person</div>
+          <div class="l3" keyword="opt_c:iperson">Indigenous person</div>
 
-          <div class="l4">Pregnant and Lactating Person</div>
+          <div class="l4" keyword="opt_c:plactp">Pregnant and Lactating Person</div>
 
-          <div class="l5">Person living with HIV</div>
+          <div class="l5" keyword="opt_c:plwhiv">Person living with HIV</div>
 
-          <div class="l6" keyword="opt_c:total">Total</div>
+          <div class="l1c2"></div>
+          <div class="l1c3"></div>
+          <div class="l1c4"></div>
+          <div class="l1tt"></div>
 
-          <div class="l1c2"><input /></div>
+          <div class="l2c2"></div>
+          <div class="l2c3"></div>
+          <div class="l2c4"></div>
+          <div class="l2tt"></div>
 
-          <div class="l1c3"><input /></div>
+          <div class="l3c2"></div>
+          <div class="l3c3"></div>
+          <div class="l3c4"></div>
+          <div class="l3tt"></div>
 
-          <div class="l1c4"><input /></div>
+          <div class="l4c2"></div>
+          <div class="l4c3"></div>
+          <div class="l4c4"></div>
+          <div class="l4tt"></div>
 
-          <div class="l1tt"><input /></div>
+          <div class="l5c2"></div>
+          <div class="l5c3"></div>
+          <div class="l5c4"></div>
+          <div class="l5tt"></div>
 
-          <div class="l2c2"><input /></div>
-
-          <div class="l2c3"><input /></div>
-
-          <div class="l2c4"><input /></div>
-
-          <div class="l2tt"><input /></div>
-
-          <div class="l3c2"><input /></div>
-
-          <div class="l3c3"><input /></div>
-
-          <div class="l3c4"><input /></div>
-
-          <div class="l3tt"><input /></div>
-
-          <div class="l4c2"><input /></div>
-
-          <div class="l4c3"><input /></div>
-
-          <div class="l4c4"><input /></div>
-
-          <div class="l4tt"><input /></div>
-
-          <div class="l5c2"><input /></div>
-
-          <div class="l5c3"><input /></div>
-
-          <div class="l5c4"><input /></div>
-
-          <div class="l5tt"><input /></div>
-
-          <div class="l6c2tt"><input /></div>
-
-          <div class="l6c3tt"><input /></div>
-
-          <div class="l6c4tt"><input /></div>
-
-          <div class="l6tt"><input /></div>
         </div>
 
         <div class="grdTb1-3">
@@ -190,9 +167,11 @@
 
           <div class="tt" keyword="opt_c:total">Total</div>
 
-          <div class="l1">Number of clients who received clinical services</div>
+          <div class="l1" keyword="opt_c:ncwhrcs">Number of clients who received clinical services</div>
 
-          <div class="l2">Number of clients reached through information and education sessions</div>
+          <div class="l2" keyword="opt_c:ncreachies">Number of clients reached through information and education
+            sessions
+          </div>
 
           <div class="l1c2"><input /></div>
 
@@ -335,7 +314,9 @@
         <div class="grdTb2-1a" id="one">
           <div class="t1" keyword="opt_c:sgbv">Sexual and Gender-Based Violence</div>
 
-          <div class="l1 lv0">Is your clinic set up to provide emergency contraception to survivors?</div>
+          <div class="l1 lv0" keyword="opt_c:tb2q1">Is your clinic set up to provide emergency contraception to
+            survivors?
+          </div>
 
           <div class="ans rdOne" lables="Yes,No" name="q1" values="oneyes,oneno">&nbsp;</div>
         </div>
@@ -343,14 +324,17 @@
         <br />
         &nbsp;
         <div class="grdTb2-a1" id="two">
-          <div class="l1 lv0">Is your clinic set up to provide Post-Exposure Prophylaxis for HIV to survivors?</div>
+          <div class="l1 lv0" keyword="opt_c:tb2q6">Is your clinic set up to provide Post-Exposure Prophylaxis for HIV
+            to
+            survivors?</div>
 
           <div class="ans rdTwo" lables="Yes,No" name="q6" values="twoyes,twono">&nbsp;</div>
         </div>
       </div>
 
       <div catoption="xxx" class="content_tabs" id="HIVSTI">
-        <div class="lgnd">* Non-binary (NB) is someone who does not identify exclusively as male or female</div>
+        <div class="lgnd" keyword="opt_c:nbntext">* Non-binary (NB) is someone who does not identify exclusively as male
+          or female</div>
 
         <div class="grdTb3-1">
           <div class="title" keyword="opt_c:sti_hiv">Sexually transmitted infections &amp; HIV</div>
@@ -911,9 +895,9 @@
 
       <div catoption="xxx" class="content_tabs" id="CAC">
         <div class="grdTb6-1">
-          <div class="title" keyword="opt_c:cac>Comprehensive Abortion Care</div>
-  
-  <div class=" t1" keyword="opt_c:1019years">10-19 Years</div>
+          <div class="title" keyword="opt_c:cac">Comprehensive Abortion Care</div>
+
+          <div class=" t1">10-19 Years</div>
 
           <div class="t2" keyword="opt_c:2024years">20-24 Years</div>
 
@@ -921,19 +905,19 @@
 
           <div class="tt" keyword="opt_c:total">Total</div>
 
-          <div class="l1">Provided counselling on abortion</div>
+          <div class="l1" keyword="opt_c:pca">Provided counselling on abortion</div>
 
-          <div class="l2">Provided misoprostol and/or mifepristone for uterine evacuation</div>
+          <div class="l2" keyword="opt_c:pmmue">Provided misoprostol and/or mifepristone for uterine evacuation</div>
 
-          <div class="l3">Provided MVA for uterine evacuation</div>
+          <div class="l3" keyword="opt_c:pmvaue">Provided MVA for uterine evacuation</div>
 
-          <div class="l4">Provided D&amp;C for uterine evacuation*</div>
+          <div class="l4" keyword="opt_c:pdcue">Provided D&amp;C for uterine evacuation*</div>
 
-          <div class="l5">Treated for complications of abortion</div>
+          <div class="l5" keyword="opt_c:tca">Treated for complications of abortion</div>
 
-          <div class="l6">Received contraception method before discharge</div>
+          <div class="l6" keyword="opt_c:rcmbd">Received contraception method before discharge</div>
 
-          <div class="l7">Referred for comprehensive abortion care</div>
+          <div class="l7" keyword="opt_c:rcac">Referred for comprehensive abortion care</div>
 
           <div class="l1c2"><input /></div>
 
