--- a/local.html
+++ b/local.html
@@ -119,6 +119,60 @@
 
         </div>
 
+        <div class="grdTb1-4">
+          <div class="tt">Pillar 2: Number of participants for SRHiE Trainings this Reporting Period</div>
+          <div class="t1">M</div>
+          <div class="t2">F</div>
+          <div class="t3">NB*</div>
+          <div class="l1">MISP Training</div>
+          <div class="l1c1"><input/></div>
+          <div class="l1c2"><input/></div>
+          <div class="l1c3"><input/></div>
+          <div class="l2">Humanitarian Coordination Training</div>
+          <div class="l2c1"><input/></div>
+          <div class="l2c2"><input/></div>
+          <div class="l2c3"><input/></div>
+          <div class="l3">SGBV Training</div>
+          <div class="l3c1"><input/></div>
+          <div class="l3c2"><input/></div>
+          <div class="l3c3"><input/></div>
+          <div class="l4">STI / HIV Training</div>
+          <div class="l4c1"><input/></div>
+          <div class="l4c2"><input/></div>
+          <div class="l4c3"><input/></div>
+          <div class="l5">EmONC / Safe Delivery Training</div>
+          <div class="l5c1"><input/></div>
+          <div class="l5c2"><input/></div>
+          <div class="l5c3"><input/></div>
+          <div class="l6">Contraception Training</div>
+          <div class="l6c1"><input/></div>
+          <div class="l6c2"><input/></div>
+          <div class="l6c3"><input/></div>
+          <div class="l7">Comprehensive Abortion Care Training</div>
+          <div class="l7c1"><input/></div>
+          <div class="l7c2"><input/></div>
+          <div class="l7c3"><input/></div>
+          <div class="l8">Adolescent SRHiE Training</div>
+          <div class="l8c1"><input/></div>
+          <div class="l8c2"><input/></div>
+          <div class="l8c3"><input/></div>
+          <div class="l9">Other SRH Training</div>
+          <div class="l9c1"><input/></div>
+          <div class="l9c2"><input/></div>
+          <div class="l9c3"><input/></div>
+        </div>
+
+        <div class="grdTb1-1">
+          <div class="title" keyword="opt_c:xxx">PILLAR 4: Recovery</div>
+
+          <div class="t1" keyword="opt_c:xxx">Value</div>
+
+          <div class="l1" keyword="opt_c:xxx">Total number of policies which integrate humanitarian considerations (e.g., finance, safety, and security, etc.)</div>
+
+          <div class="l1c2"><input /></div>
+
+        </div>
+
       </div>
 
       <div class="content_tabs" id="xx2"></div>
