--- a/local.html
+++ b/local.html
@@ -24,9 +24,9 @@
   <div id="CustomForm_Content">
     <div id="tabs" style="display:block;">
       <ul class="custom_tab" id="mycustomtab">
-        <li><a href="#xx1" keyword="opt_c:tb1title">Xx1</a></li>
-        <li><a href="#xx2" keyword="opt_c:tb2title">Xx2</a></li>
-        <li><a href="#xx3" keyword="opt_c:tb3title">Xx3</a></li>
+        <li><a href="#xx1" keyword="opt_c:xxx">Xx1</a></li>
+        <li><a href="#xx2" keyword="opt_c:xxx">Xx2</a></li>
+        <li><a href="#xx3" keyword="opt_c:xxx">Xx3</a></li>
       </ul>
 
       <div class="content_tabs" id="xx1">
@@ -34,26 +34,26 @@
         <div class="grdTb1-1">
           <div class="title" keyword="opt_c:xxx">Pillar 1: Advocacy and Policy</div>
 
-          <div class="t1" keyword="opt_c:xxx">Value</div>
+          <div class="t1" keyword="opt_c:value">Value</div>
 
-          <div class="l1" keyword="opt_c:xxx">Total number of successful policy initiatives and/or positive legislative
+          <div class="l1" keyword="opt_c:grd1-l1">Total number of successful policy initiatives and/or positive legislative
             changes in support or defense of sexual and reproductive health and rights (SRHR) and gender equality
             focused on humanitarian preparedness and/or response to which the MA's advocacy efforts have contributed to,
             during the reporting period.
           </div>
 
-          <div class="l2" keyword="opt_c:xxx">Total number of global, regional, or national events in which the MA
+          <div class="l2" keyword="opt_c:grd1-l2">Total number of global, regional, or national events in which the MA
             participated in this reporting period</div>
 
-          <div class="l3" keyword="opt_c:xxx">Total number of SRHiE focused joint events the MA conducted with partners
+          <div class="l3" keyword="opt_c:grd1-l3">Total number of SRHiE focused joint events the MA conducted with partners
             this reporting period</div>
 
-          <div class="l4" keyword="opt_c:xxx">Total number of publications and abstracts with SPRINT contribution
+          <div class="l4" keyword="opt_c:grd1-l4">Total number of publications and abstracts with SPRINT contribution
             accepted by peer reviewed journals or in international, regional, and national level forums</div>
 
-          <div class="l5" keyword="opt_c:xxx">Total number of SRHiE Research Initiatives currently underway</div>
+          <div class="l5" keyword="opt_c:grd1-l5">Total number of SRHiE Research Initiatives currently underway</div>
 
-          <div class="l6" keyword="opt_c:xxx">Number of “Campaigns” integrating messages on SRH in emergencies in the
+          <div class="l6" keyword="opt_c:grd1-l6">Number of “Campaigns” integrating messages on SRH in emergencies in the
             MA's external channels</div>
 
           <div class="l1c2"><input /></div>
@@ -72,42 +72,42 @@
 
         <div class="grdTb1-2">
 
-          <div class="t1" keyword="opt_c:xxx">Pillar 2: Emergency Preparedness</div>
+          <div class="t1" keyword="opt_c:grd2-title">Pillar 2: Emergency Preparedness</div>
 
-          <div class="l1 lv0" keyword="opt_c:xxx">Does the MA have a current Emergency Preparedness Plan (EPP) and / or Emergency Response Plan (ERP)</div>
+          <div class="l1 lv0" keyword="opt_c:grd2-l1">Does the MA have a current Emergency Preparedness Plan (EPP) and / or Emergency Response Plan (ERP)</div>
 
           <div class="ans1" lables="Yes,No" name="q1" values="yes, no"></div>
 
-          <div class="l2 lv0" keyword="opt_c:xxx">Does the MA have up-to-date policies and guidelines for procurement and logistics for this reporting period?</div>
+          <div class="l2 lv0" keyword="opt_c:grd2-l2">Does the MA have up-to-date policies and guidelines for procurement and logistics for this reporting period?</div>
 
           <div class="ans2" lables="Yes,No" name="q2" values="yes, no"></div>
 
-          <div class="l3 lv0" keyword="opt_c:xxx">Does the MA currently have trained logistics staff in place?</div>
+          <div class="l3 lv0" keyword="opt_c:grd2-l3">Does the MA currently have trained logistics staff in place?</div>
 
           <div class="ans3" lables="Yes,No" name="q3" values="yes, no"></div>
 
-          <div class="l4 lv0" keyword="opt_c:xxx">Does the MA currently have prepositioned SRH supplies and equipment in place for an emergency response?</div>
+          <div class="l4 lv0" keyword="opt_c:grd2-l4">Does the MA currently have prepositioned SRH supplies and equipment in place for an emergency response?</div>
 
           <div class="ans4" lables="Yes,No" name="q4" values="yes, no"></div>
 
-          <div class="l5 lv0" keyword="opt_c:xxx">Does the MA currently have staff and volunteers registered on a surge roster?</div>
+          <div class="l5 lv0" keyword="opt_c:grd2-l5">Does the MA currently have staff and volunteers registered on a surge roster?</div>
 
           <div class="ans5" lables="Yes,No" name="q5" values="yes, no"></div>
 
         </div>
 
         <div class="grdTb1-3">
-          <div class="title" keyword="opt_c:xxx">Pillar 2: Preparedness</div>
+          <div class="title" keyword="opt_c:grd3-title">Pillar 2: Preparedness</div>
 
-          <div class="t1" keyword="opt_c:xxx">Value</div>
+          <div class="t1" keyword="opt_c:value">Value</div>
 
-          <div class="l1" keyword="opt_c:xxx">Number of SRHiE Trainings Conducted this reporting period</div>
+          <div class="l1" keyword="opt_c:grd3-l1">Number of SRHiE Trainings Conducted this reporting period</div>
 
-          <div class="l2" keyword="opt_c:xxx">Number of in-country coordination mechanisms the MA is actively engaged with</div>
+          <div class="l2" keyword="opt_c:grd3-l2">Number of in-country coordination mechanisms the MA is actively engaged with</div>
 
-          <div class="l3" keyword="opt_c:xxx">Number of active collaborations/partnerships established (for preparedness & delivery of SRHiE)</div>
+          <div class="l3" keyword="opt_c:grd3-l3">Number of active collaborations/partnerships established (for preparedness & delivery of SRHiE)</div>
 
-          <div class="l4" keyword="opt_c:xxx">Number of simulation exercises conducted annually in Indo-Pacific MAs</div>
+          <div class="l4" keyword="opt_c:grd3-l4">Number of simulation exercises conducted annually in Indo-Pacific MAs</div>
 
           <div class="l1c2"><input /></div>
 
@@ -120,54 +120,54 @@
         </div>
 
         <div class="grdTb1-4">
-          <div class="tt">Pillar 2: Number of participants for SRHiE Trainings this Reporting Period</div>
-          <div class="t1">M</div>
-          <div class="t2">F</div>
-          <div class="t3">NB*</div>
-          <div class="l1">MISP Training</div>
+          <div class="tt" keyword="opt_c:grd4-title">Pillar 2: Number of participants for SRHiE Trainings this Reporting Period</div>
+          <div class="t1" keyword="opt_c:grd4-male">M</div>
+          <div class="t2" keyword="opt_c:grd4-female">F</div>
+          <div class="t3" keyword="opt_c:grd4-NB">NB*</div>
+          <div class="l1" keyword="opt_c:grd4-l1">MISP Training</div>
           <div class="l1c1"><input/></div>
           <div class="l1c2"><input/></div>
           <div class="l1c3"><input/></div>
-          <div class="l2">Humanitarian Coordination Training</div>
+          <div class="l2" keyword="opt_c:grd4-l2">Humanitarian Coordination Training</div>
           <div class="l2c1"><input/></div>
           <div class="l2c2"><input/></div>
           <div class="l2c3"><input/></div>
-          <div class="l3">SGBV Training</div>
+          <div class="l3" keyword="opt_c:grd4-l3">SGBV Training</div>
           <div class="l3c1"><input/></div>
           <div class="l3c2"><input/></div>
           <div class="l3c3"><input/></div>
-          <div class="l4">STI / HIV Training</div>
+          <div class="l4" keyword="opt_c:grd4-l4">STI / HIV Training</div>
           <div class="l4c1"><input/></div>
           <div class="l4c2"><input/></div>
           <div class="l4c3"><input/></div>
-          <div class="l5">EmONC / Safe Delivery Training</div>
+          <div class="l5" keyword="opt_c:grd4-l5">EmONC / Safe Delivery Training</div>
           <div class="l5c1"><input/></div>
           <div class="l5c2"><input/></div>
           <div class="l5c3"><input/></div>
-          <div class="l6">Contraception Training</div>
+          <div class="l6" keyword="opt_c:grd4-l6">Contraception Training</div>
           <div class="l6c1"><input/></div>
           <div class="l6c2"><input/></div>
           <div class="l6c3"><input/></div>
-          <div class="l7">Comprehensive Abortion Care Training</div>
+          <div class="l7" keyword="opt_c:grd4-l7">Comprehensive Abortion Care Training</div>
           <div class="l7c1"><input/></div>
           <div class="l7c2"><input/></div>
           <div class="l7c3"><input/></div>
-          <div class="l8">Adolescent SRHiE Training</div>
+          <div class="l8" keyword="opt_c:grd4-l8">Adolescent SRHiE Training</div>
           <div class="l8c1"><input/></div>
           <div class="l8c2"><input/></div>
           <div class="l8c3"><input/></div>
-          <div class="l9">Other SRH Training</div>
+          <div class="l9" keyword="opt_c:grd4-l9">Other SRH Training</div>
           <div class="l9c1"><input/></div>
           <div class="l9c2"><input/></div>
           <div class="l9c3"><input/></div>
         </div>
 
         <div class="grdTb1-1">
-          <div class="title" keyword="opt_c:xxx">PILLAR 4: Recovery</div>
+          <div class="title" keyword="opt_c:grd5-title">PILLAR 4: Recovery</div>
 
-          <div class="t1" keyword="opt_c:xxx">Value</div>
+          <div class="t1" keyword="opt_c:value">Value</div>
 
-          <div class="l1" keyword="opt_c:xxx">Total number of policies which integrate humanitarian considerations (e.g., finance, safety, and security, etc.)</div>
+          <div class="l1" keyword="opt_c:grd5-l1">Total number of policies which integrate humanitarian considerations (e.g., finance, safety, and security, etc.)</div>
 
           <div class="l1c2"><input /></div>
 
